--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "name": "heroku-identity-java",
   "description": "A java based sample for integrating Salesforce Identity and Heroku",
   "keywords": ["identity", "saml", "salesforce", "java"],
-  "website": "https://www.salesforce.com/platform/identity",
+  "website": "https://hortonworks--UAT.cs97.my.salesforce.com/platform/identity",
   "repository": "https://github.com/salesforceidentity/heroku-identity-java",
   "logo": "https://www.salesforceidentity.info/img/launcher.png",
   "success_url": "/",
